# iglo

./: Cargo.toml  README.md  rustfmt.toml
examples/: example1.rs  example2.rs  pixel_shader.spirv  shader.frag  shader.vert  vertex_shader.spirv
src/: core.rs  lib.rs  parser.rs
src/os/: mod.rs  windows.rs
src/os/linux/: mod.rs  xcb.rs
src/renderer/: mod.rs
src/rhi/: d3d12.rs  descriptor.rs  dx12.rs  mod.rs  mod2.rs  pipeline.rs  queue.rs  resources.rs  spirv.rs  swapchain.rs  sync.rs  vulkan.rs
src/rhi/backend/: mod.rs  vulkan.rs
src/rhi/backend/vulkan/: mod.rs
src/wasm/: mod.rs
src/wasm/wat/: float.rs  mod.rs
tests/wasm/: hello_world.wasm  hello_world.wat
