[package]
name = "iglo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cmake = "0.1.49"

[dependencies]
ash = { version = "0.37.2", features = ["linked"] }
bitflags = "1.3.2"
glam = "0.23.0"
tracing = "0.1.37"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }
